--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,7 +81,7 @@ full = [
 
 # HTTP versions
 http1 = ["dep:atomic-waker", "dep:futures-channel", "dep:futures-core", "dep:httparse", "dep:itoa", "dep:pin-utils"]
-http2 = ["dep:futures-channel", "dep:futures-core", "dep:h2"]
+http2 = ["dep:futures-channel", "dep:futures-core", "h2/unstable"]
 
 # Client/Server
 client = ["dep:want", "dep:pin-project-lite", "dep:smallvec"]
