--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ atomic-waker = { version = "1.1.2", optional = true }
 futures-channel = { version = "0.3", optional = true }
 futures-core = { version = "0.3.31", optional = true }
 futures-util = { version = "0.3", default-features = false, features = ["alloc"], optional = true }
-h2 = { git = "https://github.com/sjcobb2022/h2", optional = true }
+h2 = { git = "https://github.com/scraptors/h2", optional = true }
 http-body-util = { version = "0.1", optional = true }
 httparse = { version = "1.9", optional = true }
 httpdate = { version = "1.0", optional = true }
